--- a/doc/candidates.ipynb
+++ b/doc/candidates.ipynb
@@ -1,6 +1,146 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibSVM]               data  label\n",
+      "0          proposal      1\n",
+      "1                1n      0\n",
+      "2           unclear      1\n",
+      "3              been      1\n",
+      "4          adequacy      1\n",
+      "5                 7      0\n",
+      "6               MCA      1\n",
+      "7               the      1\n",
+      "8               you      1\n",
+      "9   recommendatlons      0\n",
+      "10            thelr      1\n",
+      "11              the      1\n",
+      "12              Los      1\n",
+      "13            afflx      1\n",
+      "14    understandlng      0\n",
+      "15             that      1\n",
+      "16        posltlons      0\n",
+      "17              the      1\n",
+      "18         Drlnklng      0\n",
+      "19       1ndustrlal      0\n",
+      "[[12204  4508]\n",
+      " [ 2622 24967]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.82      0.73      0.77     16712\n",
+      "           1       0.85      0.90      0.88     27589\n",
+      "\n",
+      "   micro avg       0.84      0.84      0.84     44301\n",
+      "   macro avg       0.84      0.82      0.82     44301\n",
+      "weighted avg       0.84      0.84      0.84     44301\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from detection import *\n",
+    "\n",
+    "words, label = labelTesseract()\n",
+    "train_data, test_data, train_label, test_label = div_train(words, label)\n",
+    "bigram_dict = compute_bigram()\n",
+    "featureMatrix_train = buildFeatures(train_data, bigram_dict)\n",
+    "featureMatrix_test = buildFeatures(test_data, bigram_dict)\n",
+    "\n",
+    "# uncomment for testing\n",
+    "'''\n",
+    "head = featureMatrix_train.head()\n",
+    "print(head.to_string())\n",
+    "'''\n",
+    "\n",
+    "# build classifier\n",
+    "svm_class = SVC(kernel='rbf', verbose=True, gamma='scale')\n",
+    "svm_class.fit(featureMatrix_train, train_label)\n",
+    "\n",
+    "# prediction\n",
+    "prediction = svm_class.predict(featureMatrix_test)\n",
+    "\n",
+    "output = pd.DataFrame({'data': test_data,\n",
+    "                       'label': prediction})\n",
+    "\n",
+    "print(output[:20])\n",
+    "\n",
+    "##### evaluation\n",
+    "#confustion Matrix\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "print(confusion_matrix(test_label, prediction))\n",
+    "print(classification_report(test_label, prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typos = output[output.label == 0].reset_index(drop = True).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove all number\n",
+    "cleaned_typos = []\n",
+    "for typo in typos:\n",
+    "    try:\n",
+    "        int(typo)\n",
+    "    except:\n",
+    "        cleaned_typos.append(typo)\n",
+    "cleaned_typos = pd.Series(cleaned_typos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "# remove puncutation and numbers\n",
+    "cleaned_typos = cleaned_typos.str.replace(r\"[{}]\".format(string.punctuation + '‘'),'')\n",
+    "cleaned_typos = cleaned_typos.str.replace(r'\\d','')\n",
+    "cleaned_typos = cleaned_typos[cleaned_typos != '']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_typos.to_csv('cleaned_typos.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Candidates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 462,
    "metadata": {},
@@ -224,18 +364,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
   }
  },
  "nbformat": 4,
