--- a/doc/candidates.ipynb
+++ b/doc/candidates.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "2  september  septembex   r   x      8  subsititution"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,65 +404,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['september', 'stember', 'e', '@', 1, 'insertion'],\n",
-       "       ['september', 'septemb', 'e', '@', 7, 'insertion'],\n",
-       "       ['september', 'septembex', 'r', 'x', 8, 'subsititution']],\n",
+       "array(['september', 'septembex', 'r', 'x', 8, 'subsititution'],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "correction.values"
+    "correction.values[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 insertion\n",
-      "7 insertion\n",
-      "8 subsititution\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'result' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-442-0113ffb5714d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprobability_of_t_given_c\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-418-03e9d3555645>\u001b[0m in \u001b[0;36mprobability_of_t_given_c\u001b[0;34m(row)\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0;31m#lis.append(total)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'result' referenced before assignment"
      ]
     }
    ],
    "source": [
-    "for row in correction.values:\n",
-    "    typo = row[0]\n",
-    "    specificword = row[1]\n",
-    "    index = row[4]\n",
-    "    typo_type = row[5]\n",
-    "    \n",
-    "    print(index,typo_type)"
+    "probability_of_t_given_c(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def probability_of_t_given_c(correction_df):\n",
-    "    correction_list = correction_df.values\n",
+    "def probability_of_t_given_c(row):\n",
+    "    correction_list = correction.values[row]\n",
     "    \n",
-    "    typo = row[0]\n",
-    "    specificword = row[1]\n",
-    "    index = row[4]\n",
-    "    typo_type = row[5]\n",
+    "    typo = correction_list[0]\n",
+    "    specificword = correction_list[1]\n",
+    "    index = correction_list[4]\n",
+    "    typo_type = correction_list[5]\n",
     "    \n",
     "    if typo_type =='insertion':\n",
     "        if index != 0:\n",
@@ -528,7 +523,7 @@
     "    if correction.iloc[i,5]=='substitution':\n",
     "        X=correction.iloc[i,2]\n",
     "        Y=correction.iloc[i,3]\n",
-    "        heihei=confusionsub[confusionsub.iloc[:,0]==X]\n",
+    "        heihei=confusionsub[confus 4cx ionsub.iloc[:,0]==X]\n",
     "        sub=heihei[Y].iloc[0]\n",
     "        #lis.append(sub)\n",
     "\n",
@@ -537,7 +532,7 @@
     "            total=total+truth_clean[z].count(Y)\n",
     "            #lis.append(total)\n",
     "            result =sub/total\n",
-    "    "
+    "    return result"
    ]
   },
   {
@@ -702,6 +697,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
