--- a/doc/candidates.ipynb
+++ b/doc/candidates.ipynb
@@ -381,7 +381,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 444,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "truth_counts = 0\n",
+    "corpus = []\n",
+    "# create a list of all .txt files\n",
+    "truth_files_list = glob.glob('../data/ground_truth/*.txt')\n",
+    "# reading the ground truth file\n",
+    "for file in truth_files_list:\n",
+    "    with open(file) as fd:\n",
+    "        for line in fd:\n",
+    "            each_line = line.strip().split()\n",
+    "            for word in each_line:\n",
+    "                corpus.append(word)\n",
+    "                truth_counts += 1\n",
+    "corpus = pd.Series(corpus)\n",
+    "corpus = corpus.str.extract(r'([a-zA-Z]+)').dropna()[0]\n",
+    "corpus = corpus.str.lower().unique()\n",
+    "\n",
+    "truth_clean = corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,49 +426,6 @@
     "teseract_clean = pd.Series(teseract_clean)\n",
     "teseract_clean = teseract_clean.str.extract(r'([a-zA-Z]+)').dropna()[0]\n",
     "teseract_clean = teseract_clean.str.lower().unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 441,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['september', 'septembex', 'r', 'x', 8, 'subsititution'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 441,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "correction.values[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 442,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'result' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-442-0113ffb5714d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprobability_of_t_given_c\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-418-03e9d3555645>\u001b[0m in \u001b[0;36mprobability_of_t_given_c\u001b[0;34m(row)\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0;31m#lis.append(total)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 82\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'result' referenced before assignment"
-     ]
-    }
-   ],
-   "source": [
-    "probability_of_t_given_c(2)"
    ]
   },
   {
