--- a/doc/Correction.ipynb
+++ b/doc/Correction.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -817,6 +817,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in long_scalars\n",
+      "/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:17: RuntimeWarning: divide by zero encountered in long_scalars\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -828,18 +843,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 48.20%\n"
+     ]
+    }
+   ],
    "source": [
     "print('Accuracy: {:.2%}'.format(vintersection(Correction_output,correct)/len(Correction_output)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No corrected rate: 39.3%\n"
+     ]
+    }
+   ],
    "source": [
     "print('No corrected rate: {:.1%}'.format(no_correction_num/len(Correction_output)))"
    ]
@@ -853,11 +884,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Correction_output.to_csv('Correction_output_all.csv')"
+    "Correction_output.to_csv('../output/Correction_output_all.csv')"
    ]
   },
   {
@@ -979,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,13 +1037,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76b35598cc944c81b82b6045a35ecb43",
+       "model_id": "8ac591b0236c4b0799168bac80d6aae3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1040,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1081,11 +1112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Correction_output.to_csv('Correction_output_ed_1.csv')"
+    "Correction_output.to_csv('../output/Correction_output_ed_1.csv')"
    ]
   },
   {
