--- a/doc/Correction.ipynb
+++ b/doc/Correction.ipynb
@@ -8,15 +8,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.0 Importing libraries for detection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import glob\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from detection import *\n",
-    "from collections import Counter"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "import collections\n",
+    "from collections import defaultdict\n",
+    "from collections import Counter\n",
+    "from itertools import groupby\n",
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 Labelling tesseact"
    ]
   },
   {
@@ -33,14 +53,6 @@
     "\n",
     "'''\n",
     "\n",
-    "import glob\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.svm import SVC\n",
-    "import collections\n",
-    "from collections import defaultdict\n",
-    "from itertools import groupby\n",
-    "import nltk\n",
     "\n",
     "#import feature as feature\n",
     "\n",
@@ -86,13 +98,12 @@
     "                            test_words.append(test_word)\n",
     "                            truth_test_pair.append((truth_word, test_word))\n",
     "    # uncomment below for testing\n",
-    "    ''' \n",
-    "    print(actual_counts)\n",
+    "    \n",
+    "    # print(actual_counts)\n",
     "    print(len(truth_words))\n",
     "    print(len(test_words))\n",
     "    print(truth_words[:20])\n",
     "    print(test_words[:20])\n",
-    "    '''\n",
     "    \n",
     "    '''\n",
     "    # from the lists of words (truth, test) compare each of them\n",
@@ -120,12 +131,26 @@
     "            label.append(0)\n",
     "    \n",
     "    # uncomment below for commenting\n",
-    "    '''\n",
+    "    \n",
     "    print(label[:20])\n",
-    "    '''\n",
+    "    \n",
     "\n",
-    "    return (truth_test_pair, test_words, label)\n",
-    "\n",
+    "    return (truth_test_pair, test_words, label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Divide into test/train (by default 20%, 80%)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def div_train(pair, label, k = 0.2):\n",
     "\n",
     "    # data = pd.DataFrame(words)\n",
@@ -145,10 +170,22 @@
     "\n",
     "\n",
     "\n",
-    "    return (X_train, X_test, train_label, test_label, X_train_truth, X_test_truth)\n",
-    "\n",
-    "\n",
-    "\n",
+    "    return (X_train, X_test, train_label, test_label, X_train_truth, X_test_truth)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.3 Building Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def buildFeatures(train_data, bigram_dict):\n",
     "    # f1\n",
     "    length = []\n",
@@ -431,6 +468,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4 Main SVM calling part"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -440,7 +484,7 @@
     "train_data, test_data, train_label, test_label, ground_truth_train, ground_truth_test = div_train(pair, label)\n",
     "\n",
     "# uncomment to test for truth, tesseract pair\n",
-    "'''\n",
+    "\n",
     "print(train_data[:10])\n",
     "print(ground_truth_train[:10])\n",
     "print(train_label[:10])\n",
@@ -448,7 +492,7 @@
     "print(test_data[:10])\n",
     "print(ground_truth_test[:10])\n",
     "print(test_label[:10])\n",
-    "'''\n",
+    "\n",
     "\n",
     "\n",
     "bigram_dict = compute_bigram()\n",
@@ -477,7 +521,7 @@
     "#confustion Matrix\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
-    "print(confusion_matrix(test_label, prediction))\n",
+    "# print(confusion_matrix(test_label, prediction))\n",
     "print(classification_report(test_label, prediction))"
    ]
   },
