fix: fixed div_by_zero

--- a/doc/Correction.ipynb
+++ b/doc/Correction.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,8 +417,8 @@
     "def f_10(word, bigram_dict, c = 10000):\n",
     "\n",
     "    word = word.lower()\n",
-    "    count = 0.0\n",
-    "    naturalness = 0.0\n",
+    "    count = 0\n",
+    "    naturalness = 0\n",
     "    for i in range(len(word)-1):\n",
     "        count += 1.0\n",
     "        naturalness += bigram_dict[(word[i], word[i+1])] / c\n",
@@ -476,45 +476,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LibSVM]         data  label\n",
-      "0       belng      1\n",
-      "1    Programs      0\n",
-      "2      Senate      1\n",
-      "3          1n      0\n",
-      "4         end      1\n",
-      "5           a      1\n",
-      "6      actlon      1\n",
-      "7   commlttee      0\n",
-      "8         was      1\n",
-      "9      damage      1\n",
-      "10         to      1\n",
-      "11        the      1\n",
-      "12      BONDS      1\n",
-      "13    interim      1\n",
-      "14    January      1\n",
-      "15      Board      1\n",
-      "16  companles      0\n",
-      "17       have      1\n",
-      "18     chosen      1\n",
-      "19         to      1\n",
-      "[[12347  4547]\n",
-      " [ 2606 24801]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.83      0.73      0.78     16894\n",
-      "           1       0.85      0.90      0.87     27407\n",
-      "\n",
-      "   micro avg       0.84      0.84      0.84     44301\n",
-      "   macro avg       0.84      0.82      0.82     44301\n",
-      "weighted avg       0.84      0.84      0.84     44301\n",
-      "\n"
+      "221504\n",
+      "221504\n",
+      "['communications', 'network.', 'Member', 'companies', 'are', 'strongly', 'encouraged', 'to', 'provide', 'this', 'needed', 'support.', 'The', 'state', 'advocacy', 'program*', 'including', 'the', 'new', 'CMA/LINC']\n",
+      "['communlcatlons', 'network.', 'Member', 'companles', 'are', 'strongly', 'encouraged', 'to', 'provlde', 'thls', 'needed', 'support.', 'The', 'state', 'advocacy', 'program\"', '1nclud1ng', 'the', 'new', 'CMA/LINC']\n",
+      "[0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1]\n",
+      "['1', 'they', '15', 'to', 'that', 'Natlonal', 'Whltson', 'the', 'energyiconsumlng', 'from']\n",
+      "['12', 'they', 'is', 'to', 'that', 'National', 'Whitson', 'the', 'energy-consuming', 'from']\n",
+      "[0, 1, 0, 1, 1, 0, 0, 1, 0, 1]\n",
+      "['than', 'dutles', 'accord', \"Victim's\", 'of', '1n', 'the', 'for', 'by', '7']\n",
+      "['than', 'duties', 'accord', \"Victim's\", 'of', 'in', 'the', 'for', 'by', '-']\n",
+      "[1, 0, 1, 1, 1, 0, 1, 1, 1, 0]\n",
+      "[LibSVM]"
      ]
     }
    ],
